# fura2a

./: CMakeLists.txt  README.md  arm_positions.csv  frames_2024-12-19_01.59.04.gv  normalised_pendulum_positions.csv  package.xml  setup.py  swingup_down_data.txt
config/: controller.yaml
fura2a/: again.py  again2.py  again3.py  better_pd.py  compare_different_normalizations.py  final.py  get_J.ipynb  ignore.py  lqr.py  more_plots.py  mpc.py  new_lqr.py  newest.py  pd.py  plot_u.py  plots_finished.py  scrape_joint_data.py  simple_publisher.py  test.ipynb  test_joints.py
fura2a/final/: combined_knowledge.py  control_method.py
fura2a/old/: frames_2024-12-17_03.24.12.gv  gpt_lqr.py  lqr.py  new_lqr.py  newest.py  raw_reader.py  swingup.py  test.ipynb
launch/: bringup.launch.py  rsp.launch.py
meshes/: arm.stl  base_link.stl  column.stl  cuboid_pendulum.stl  fake_arm.stl  hollowed_arm.stl  pendulum_down.stl  pendulum_up.stl
plots/: near_top_swingup_vel.txt  swingup_control_iinputs.txt  swingup_velocity.txt
rviz/: display.rviz
src/: eigen_plots.ipynb  get_linearized_ab_pi.ipynb  lqr.ipynb  my_lqr.ipynb  normalized_angles.ipynb  pendulum_positions.txt  plot_joints.py  plot_up_down.py  test.ipynb  test1.ipynb
urdf/: fura2a.gazebo  fura2a.xacro  materials.xacro  ros2_control.xacro
worlds/: basic.world  empty.world
